#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.59)
AC_INIT(grouppolicy, 5.0.0, support@likewisesoftware.com)
AC_CANONICAL_TARGET
AM_INIT_AUTOMAKE([-Wall -Werror foreign])
AC_CONFIG_HEADERS([include/config.h])

AM_CPPFLAGS=""
AM_CFLAGS=""
AM_LDFLAGS=""

PKG_VERSION="5.0.0"

# Platform-specific stuff

MOD_EXT=".so"
DS_FRAMEWORK_LDFLAGS=""

case "$host_os:$host_cpu" in
	linux*:i?86|linux*:x86_64|linux*:s390*)
                echo "Detected Linux system"
		AC_DEFINE([__LWI_LINUX__], [], [Define if OS is Linux])
		;;
	solaris*:i?86|solaris*:sparc*)
                echo "Detected Solaris system"
		NSS_SUBDIR="solaris"
		AC_DEFINE([__LWI_SOLARIS__], [], [Define if OS is Solaris])
		AC_DEFINE([__EXTENSIONS__], [], [Solaris requires this macro to be defined to enable
several function declarations like:
settimeofday(3) in sys/time.h
vsyslog(3) in syslog.h])
	        AC_DEFINE([_XOPEN_SOURCE], [500], [Define to desired XOPEN compliance level])
		;;
        darwin8.*:*)
                echo "Detected Mac OS X - Tiger"
                DS_FRAMEWORK_LDFLAGS="-framework DirectoryService"
                AC_DEFINE([__LWI_DARWIN__], [], [Define if OS is Darwin])
                ;;
        darwin9.*:*)
                echo "Detected Mac OS X - Leopard"
                DS_FRAMEWORK_LDFLAGS="-framework DirectoryService"
                AC_DEFINE([__LWI_DARWIN__], [], [Define if OS is Darwin])
                ;;
        darwin10.*:*)
                echo "Detected Mac OS X - Snow Leopard"
                DS_FRAMEWORK_LDFLAGS="-framework DirectoryService"
                AC_DEFINE([__LWI_DARWIN__], [], [Define if OS is Darwin - x64 Snow Leopard])
                AC_DEFINE([__LWI_DARWIN_X64__], [], [Define if OS is Darwin - x64 Snow Leopard])
                ;;
	freebsd*:*)
                echo "Detected FreeBSD system"
		AC_DEFINE([__LWI_FREEBSD__], [], [Define if OS is FreeBSD])
		;;
	hpux*:hppa*)
                echo "Detected HPUX - HPPA system"
		MOD_EXT=".sl"
		AC_DEFINE([__LWI_HP_UX__], [], [Define if OS is HP-UX])
        AC_DEFINE([_XOPEN_SOURCE_EXTENDED], [1], [Define on HP-UX])
		;;
	hpux*:ia64*)
                echo "Detected HPUX - IA64 system"
		NSS_SHR_EXT=".so"
		AC_DEFINE([__LWI_HP_UX__], [], [Define if OS is HP-UX])
        AC_DEFINE([_XOPEN_SOURCE_EXTENDED], [1], [Define on HP-UX])
		;;
	aix*:*)
                echo "Detected AIX system"
		AC_DEFINE([__LWI_AIX__], [], [Define if OS is AIX])
        AC_DEFINE([_LINUX_SOURCE_COMPAT], [], [Enable Linux source compatibility on AIX])
		;;
esac

AC_SUBST(MOD_EXT)
AC_SUBST(DS_FRAMEWORK_LDFLAGS)

AC_DEFINE_UNQUOTED([MOD_EXT], ["$MOD_EXT"], [Extension of shared modules])

# krb5

AC_ARG_WITH([krb5],
        [AC_HELP_STRING([--with-krb5=<dir>], [use krb5 located in prefix <dir>])],
        [
		KRB5_INCLUDES="-I$withval/include"
                KRB5_LDFLAGS="-L$withval/lib"
        ])

AC_ARG_WITH([krb5-includes],
        [AC_HELP_STRING([--with-krb5-includes=<dir>], [use krb5 includes located in <dir>])],
        [
		KRB5_INCLUDES="-I$withval"
        ])

AC_ARG_WITH([krb5-libs],
        [AC_HELP_STRING([--with-krb5-libs=<dir>], [use krb5 libs located in <dir>])],
        [
		KRB5_LDFLAGS="-L$withval"
        ])

KRB5_LIBS="-lgssapi_krb5 -lkrb5 -lk5crypto"

AC_SUBST(KRB5_INCLUDES)
AC_SUBST(KRB5_LDFLAGS)
AC_SUBST(KRB5_LIBS)

# openldap

AC_ARG_WITH([openldap],
        [AC_HELP_STRING([--with-openldap=<dir>], [use openldap located in prefix <dir>])],
        [
		OPENLDAP_INCLUDES="-I$withval/include"
                OPENLDAP_LDFLAGS="-L$withval/lib"
        ])

AC_ARG_WITH([openldap-includes],
        [AC_HELP_STRING([--with-openldap-includes=<dir>], [use openldap includes located in <dir>])],
        [
		OPENLDAP_INCLUDES="-I$withval"
        ])

AC_ARG_WITH([openldap-libs],
        [AC_HELP_STRING([--with-openldap-libs=<dir>], [use openldap libs located in <dir>])],
        [
		OPENLDAP_LDFLAGS="-L$withval"
        ])

OPENLDAP_LIBS="-lldap_r -llber"

AC_SUBST(OPENLDAP_INCLUDES)
AC_SUBST(OPENLDAP_LDFLAGS)
AC_SUBST(OPENLDAP_LIBS)

# centutils

AC_ARG_WITH([centutils],
        [AC_HELP_STRING([--with-centutils=<dir>], [use centutils located in prefix <dir>])],
        [
		CENTUTILS_INCLUDES="-I$withval/include"
        CENTUTILS_LDFLAGS="-L$withval/lib"
        ])

AC_ARG_WITH([centutils-includes],
        [AC_HELP_STRING([--with-centutils-includes=<dir>], [use centutils includes located in <dir>])],
        [
		CENTUTILS_INCLUDES="-I$withval"
        ])

AC_ARG_WITH([centutils-libs],
        [AC_HELP_STRING([--with-centutils-libs=<dir>], [use centutils libs located in <dir>])],
        [
		CENTUTILS_LDFLAGS="-L$withval"
        ])


# libxml2

AC_ARG_WITH([libxml2],
        [AC_HELP_STRING([--with-libxml2=<dir>], [use libxml2 located in prefix <dir>])],
        [
		LIBXML2_INCLUDES="-I$withval/include"
        LIBXML2_LDFLAGS="-L$withval/lib"
        ])

AC_ARG_WITH([libxml2-includes],
        [AC_HELP_STRING([--with-libxml2-includes=<dir>], [use libxml2 includes located in <dir>])],
        [
		LIBXML2_INCLUDES="-I$withval"
        ])

AC_ARG_WITH([libxml2-libs],
        [AC_HELP_STRING([--with-libxml2-libs=<dir>], [use libxml2 libs located in <dir>])],
        [
		LIBXML2_LDFLAGS="-L$withval"
        ])

LIBXML2_LIBS="-lxml2"

AC_SUBST(LIBXML2_INCLUDES)
AC_SUBST(LIBXML2_LDFLAGS)
AC_SUBST(LIBXML2_LIBS)

# lsass

AC_ARG_WITH([lsass],
        [AC_HELP_STRING([--with-lsass=<dir>], [use lsass located in prefix <dir>])],
        [
		LSASS_INCLUDES="-I$withval/include"
        LSASS_LDFLAGS="-L$withval/lib"
        ])

AC_ARG_WITH([lsass-includes],
        [AC_HELP_STRING([--with-lsass-includes=<dir>], [use lsass includes located in <dir>])],
        [
		LSASS_INCLUDES="-I$withval"
        ])

AC_ARG_WITH([lsass-libs],
        [AC_HELP_STRING([--with-lsass-libs=<dir>], [use lsass libs located in <dir>])],
        [
		LSASS_LDFLAGS="-L$withval"
        ])

LSASS_LIBS="-llsaclient"

AC_SUBST(LSASS_INCLUDES)
AC_SUBST(LSASS_LDFLAGS)
AC_SUBST(LSASS_LIBS)

# crypto

AC_ARG_WITH([crypto],
        [AC_HELP_STRING([--with-crypto=<dir>], [use crypto located in prefix <dir>])],
        [
		CRYPTO_INCLUDES="-I$withval/include"
        CRYPTO_LDFLAGS="-L$withval/lib"
        ])

AC_ARG_WITH([crypto-includes],
        [AC_HELP_STRING([--with-crypto-includes=<dir>], [use crypto includes located in <dir>])],
        [
		CRYPTO_INCLUDES="-I$withval"
        ])

AC_ARG_WITH([crypto-libs],
        [AC_HELP_STRING([--with-crypto-libs=<dir>], [use crypto libs located in <dir>])],
        [
		CRYPTO_LDFLAGS="-L$withval"
        ])

CRYPTO_LIBS="-lcrypto"

AC_SUBST(CRYPTO_INCLUDES)
AC_SUBST(CRYPTO_LDFLAGS)
AC_SUBST(CRYPTO_LIBS)

# netlogon

AC_ARG_WITH([netlogon],
        [AC_HELP_STRING([--with-netlogon=<dir>], [use netlogon located in prefix <dir>])],
        [
		NETLOGON_INCLUDES="-I$withval/include"
                NETLOGON_LDFLAGS="-L$withval/lib"
        ])

AC_ARG_WITH([netlogon-includes],
        [AC_HELP_STRING([--with-netlogon-includes=<dir>], [use netlogon includes located in <dir>])],
        [
		NETLOGON_INCLUDES="-I$withval"
        ])

AC_ARG_WITH([netlogon-libs],
        [AC_HELP_STRING([--with-netlogon-libs=<dir>], [use netlogon libs located in <dir>])],
        [
		NETLOGON_LDFLAGS="-L$withval"
        ])

NETLOGON_LIBS="-llwnetclientapi"

AC_SUBST(NETLOGON_INCLUDES)
AC_SUBST(NETLOGON_LDFLAGS)
AC_SUBST(NETLOGON_LIBS)

# lwadvapi

AC_ARG_WITH([lwadvapi],
        [AC_HELP_STRING([--with-lwadvapi=<dir>], [use lwadvapi located in prefix <dir>])],
        [
                LWADVAPI_INCLUDES="-I$withval/include"
                LWADVAPI_LDFLAGS="-L$withval/lib"
        ])

AC_ARG_WITH([lwadvapi-includes],
        [AC_HELP_STRING([--with-lwadvapi-includes=<dir>], [use lwadvapi includes located in <dir>])],
        [
                LWADVAPI_INCLUDES="-I$withval"
        ])

AC_ARG_WITH([lwadvapi-libs],
        [AC_HELP_STRING([--with-lwadvapi-libs=<dir>], [use lwadvapi libs located in <dir>])],
        [
                LWADVAPI_LDFLAGS="-L$withval"
        ])

LWADVAPI_LIBS="-llwadvapi"
LWADVAPI_NOTHR_LIBS="-llwadvapi_nothr"

AC_SUBST(LWADVAPI_INCLUDES)
AC_SUBST(LWADVAPI_LDFLAGS)
AC_SUBST(LWADVAPI_LIBS)
AC_SUBST(LWADVAPI_NOTHR_LIBS)

# pstore

AC_ARG_WITH([pstore],
        [AC_HELP_STRING([--with-pstore=<dir>], [use pstore located in prefix <dir>])],
        [
                PSTORE_INCLUDES="-I$withval/include"
                PSTORE_LDFLAGS="-L$withval/lib"
        ])

AC_ARG_WITH([pstore-includes],
        [AC_HELP_STRING([--with-pstore-includes=<dir>], [use pstore includes located in <dir>])],
        [
                PSTORE_INCLUDES="-I$withval"
        ])

AC_ARG_WITH([pstore-libs],
        [AC_HELP_STRING([--with-pstore-libs=<dir>], [use pstore libs located in <dir>])],
        [
                PSTORE_LDFLAGS="-L$withval"
        ])

PSTORE_LIBS="-llwpsapi"

AC_SUBST(PSTORE_INCLUDES)
AC_SUBST(PSTORE_LDFLAGS)
AC_SUBST(PSTORE_LIBS)

# eventlog

AC_ARG_WITH([eventlog],
        [AC_HELP_STRING([--with-eventlog=<dir>], [use eventlog located in prefix <dir>])],
        [
		EVENTLOG_INCLUDES="-I$withval/include"
        EVENTLOG_LDFLAGS="-L$withval/lib"
        ])

AC_ARG_WITH([eventlog-includes],
        [AC_HELP_STRING([--with-eventlog-includes=<dir>], [use eventlog includes located in <dir>])],
        [
		EVENTLOG_INCLUDES="-I$withval"
        ])

AC_ARG_WITH([eventlog-libs],
        [AC_HELP_STRING([--with-eventlog-libs=<dir>], [use eventlog libs located in <dir>])],
        [
		EVENTLOG_LDFLAGS="-L$withval"
        ])

EVENTLOG_LIBS="-leventlog"

AC_SUBST(EVENTLOG_INCLUDES)
AC_SUBST(EVENTLOG_LDFLAGS)
AC_SUBST(EVENTLOG_LIBS)

# lwioclient
AC_ARG_WITH([lwioclient],
        [AC_HELP_STRING([--with-lwioclient=<dir>], [use lwioclient located in prefix <dir>])],
        [
		LWIO_INCLUDES="-I$withval/include"
        LWIO_LDFLAGS="-L$withval/lib"
        ])

AC_ARG_WITH([lwioclient-includes],
        [AC_HELP_STRING([--with-lwioclient-includes=<dir>], [use lwioclient includes located in <dir>])],
        [
		LWIO_INCLUDES="-I$withval"
        ])

AC_ARG_WITH([lwioclient-libs],
        [AC_HELP_STRING([--with-lwioclient-libs=<dir>], [use lwioclient libs located in <dir>])],
        [
		LWIO_LDFLAGS="-L$withval"
        ])

LWIO_LIBS="-llwioclient"

AC_SUBST(LWIO_INCLUDES)
AC_SUBST(LWIO_LDFLAGS)
AC_SUBST(LWIO_LIBS)

# lwreg

AC_ARG_WITH([lwreg],
        [AC_HELP_STRING([--with-lwreg=<dir>], [use lwreg located in prefix <dir>])],
        [
		LWREG_INCLUDES="-I$withval/include"
        LWREG_LDFLAGS="-L$withval/lib"
        ])

AC_ARG_WITH([lwreg-includes],
        [AC_HELP_STRING([--with-lwreg-includes=<dir>], [use lwreg includes located in <dir>])],
        [
		LWREG_INCLUDES="-I$withval"
        ])

AC_ARG_WITH([lwreg-libs],
        [AC_HELP_STRING([--with-lwreg-libs=<dir>], [use lwreg libs located in <dir>])],
        [
		LWREG_LDFLAGS="-L$withval"
        ])

LWREG_LIBS=-lregclient

AC_CHECK_HEADER([reg/reg.h],,[AC_MSG_ERROR([Could not find lwreg headers])])
AC_SUBST(LWREG_INCLUDES)
AC_SUBST(LWREG_LDFLAGS)
AC_SUBST(LWREG_LIBS)

# compat

ENABLE_COMPAT=false

AC_ARG_ENABLE([compat],
        [AC_HELP_STRING([--enable-compat], [enable compat-only build (default: disabled)])],
        [
                if test x"$enableval" = x"yes"
                then
			ENABLE_COMPAT=true
		else
			ENABLE_COMPAT=false
                fi
        ])

AM_CONDITIONAL(ENABLE_COMPAT, [$ENABLE_COMPAT])

# debugging

AC_ARG_ENABLE([debug],
        [AC_HELP_STRING([--enable-debug], [enable debugging (default: disabled)])],
        [
                if test x"$enableval" = x"yes"
                then
			AM_CFLAGS="$AM_CFLAGS -g -O0"
			AM_CPPFLAGS="$AM_CPPFLAGS -DDEBUG"			
                fi
        ])

CPPFLAGS="$CPPFLAGS -D_REENTRANT -D_GNU_SOURCE"

AM_CPPFLAGS="$AM_CPPFLAGS -I\$(top_srcdir)/include -I\$(top_builddir)/include"
AM_CFLAGS="$AM_CFLAGS -Wall -Werror -fno-strict-aliasing"

AC_SUBST(AM_CPPFLAGS)
AC_SUBST(AM_CFLAGS)

grouppolicyconfdir="$sysconfdir"
AC_SUBST(grouppolicyconfdir)
AS_AC_EXPAND(CONFIGDIR, $grouppolicyconfdir)
AC_DEFINE_UNQUOTED(CONFIGDIR, "$CONFIGDIR", [Config directory])

grouppolicycachedir="$localstatedir/lib/likewise/grouppolicy"
AC_SUBST(grouppolicycachedir)
AS_AC_EXPAND(CACHEDIR, $grouppolicycachedir)
AC_DEFINE_UNQUOTED(CACHEDIR, "$CACHEDIR", [Cache directory])
AC_DEFINE_UNQUOTED(BASEFILESDIR, "$CACHEDIR/systemfiles", [System files directory])

AS_AC_EXPAND(providerdir, $libdir)

AS_AC_EXPAND(PREFIXDIR, $prefix)
AC_DEFINE_UNQUOTED(PREFIXDIR, "$PREFIXDIR", [Prefix directory])

AS_AC_EXPAND(LIBDIR, $libdir)
AC_DEFINE_UNQUOTED(LIBDIR, "$LIBDIR", [Library directory])

EXTNLIBDIR=$LIBDIR/grouppolicy
AC_DEFINE_UNQUOTED(EXTNLIBDIR, "$EXTNLIBDIR", [Group Policy Extension Library directory])
AC_SUBST(EXTNLIBDIR)

AS_AC_EXPAND(BINDIR, ["$bindir"])
AC_DEFINE_UNQUOTED(BINDIR, ["$BINDIR"], [Bin directory])

AS_AC_EXPAND(SBINDIR, ["$sbindir"])
AC_DEFINE_UNQUOTED(SBINDIR, ["$SBINDIR"], [Sbin directory])

AS_AC_EXPAND(LOCALSTATEDIR, ["$localstatedir"])
AC_DEFINE_UNQUOTED(LOCALSTATEDIR, ["$LOCALSTATEDIR"], [Local state directory])

AC_C_BIGENDIAN

AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_LIBTOOL

AC_CHECK_LIB([nsl], [gethostname], [NSL_LIBS="-lnsl"])
AC_CHECK_LIB([dl], [dlopen], [DL_LIBS="-ldl"])
AC_CHECK_LIB([resolv], [res_query], [RESOLV_LIBS="-lresolv"])
AC_CHECK_LIB([resolv], [__res_query], [RESOLV_LIBS="-lresolv"])
AC_CHECK_LIB([pthread], [pthread_self], [PTHREAD_LIBS="-lpthread"])
AC_CHECK_LIB([rt], [clock_settime], [RT_LIBS="-lrt"])
AC_CHECK_LIB([uuid], [uuid_copy], [UUID_LIBS="-luuid"])
AC_CHECK_LIB([socket], [bind], [SOCKET_LIBS="-lsocket"])

AC_CHECK_LIB([crypto], [DES_set_key], [CRYPTO_LIBS="-lcrypto"], [], [$CRYPTO_LDFLAGS])

CENTUTILS_LIBS=""
AC_CHECK_LIB([centutils], [CTOpenFile], [CENTUTILS_LIBS="-lcentutils -lgpglib"], AC_MSG_ERROR([Use --with-centutils to find libcentutils.so]), [$CENTUTILS_LDFLAGS -lgpglib $LIBRT])

AC_SUBST(CENTUTILS_INCLUDES)
AC_SUBST(CENTUTILS_LDFLAGS)
AC_SUBST(CENTUTILS_LIBS)

AC_SUBST(NSL_LIBS)
AC_SUBST(DL_LIBS)
AC_SUBST(RESOLV_LIBS)
AC_SUBST(PTHREAD_LIBS)
AC_SUBST(RT_LIBS)
AC_SUBST(UUID_LIBS)
AC_SUBST(SOCKET_LIBS)

# Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS([inttypes.h arpa/inet.h fcntl.h netdb.h])
AC_CHECK_HEADERS([limits.h sys/syslimits.h sys/limits.h])
AC_CHECK_HEADERS([netinet/in.h stdint.h stdlib.h stdbool.h string.h])
AC_CHECK_HEADERS([strings.h sys/socket.h syslog.h unistd.h])
AC_CHECK_HEADERS([sys/types.h fcntl.h sys/stat.h time.h])
AC_CHECK_HEADERS([sys/time.h sys/varargs.h paths.h utmp.h utmpx.h])
AC_CHECK_HEADERS([nsswitch.h synch.h pthread.h wc16str.h wc16printf.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_PID_T
AC_HEADER_TIME
AC_STRUCT_TM

# Check for basic types
AC_CHECK_TYPES([int8, int16, int32, int64], [], [],
[#include <sys/types.h>
 #if __ia64
 #include <model.h>
 #endif])
AC_CHECK_TYPES([uint8, uint16, uint32, uint64])

AC_CHECK_SIZEOF([long long int])
AC_CHECK_SIZEOF([long int])

# Checks for library functions.
AC_FUNC_FORK
AC_FUNC_MALLOC
AC_FUNC_REALLOC
AC_FUNC_SELECT_ARGTYPES
AC_TYPE_SIGNAL
AC_FUNC_STRFTIME
AC_FUNC_VPRINTF
AC_FUNC_STRERROR_R
old_LDFLAGS="$LDFLAGS"
LDFLAGS="$LDFLAGS $RT_LIBS"
AC_CHECK_FUNCS([atexit localtime_r memset select socket strchr strerror strerror_r vsyslog])
AC_CHECK_FUNCS([rpl_realloc rpl_malloc clock_gettime clock_settime settimeofday gettimeofday])
AC_CHECK_FUNCS([timegm getgrouplist strtoll __strtoll strtoull __strtoull strtol strtoul])
AC_CHECK_FUNCS([EVP_EncryptFinal_ex EVP_EncryptFinal EVP_DecryptFinal_ex EVP_DecryptFinal])

LDFLAGS="$old_LDFLAGS"
AC_CHECK_DECLS([isblank], [], [], [#include <ctype.h>])
AC_CHECK_TYPES([wchar16_t], [], [], [AC_INCLUDES_DEFAULT
#ifdef HAVE_WC16STR_H
# include <wc16str.h>
#endif
])

AC_CHECK_TYPES([socklen_t], [], [], [AC_INCLUDES_DEFAULT
#include <sys/types.h>
#include <sys/socket.h>
])

saved_CFLAGS="$CFLAGS"
CFLAGS="$CFLAGS -Wall -Werror"

AC_MSG_CHECKING([if getsockname takes socklen_t*])
AC_TRY_COMPILE([
#include <sys/types.h> 
#include <sys/socket.h>
],
[
int fd = -1;
struct sockaddr addr;
socklen_t addrlen;
(void) getsockname(fd, &addr, &addrlen);
], [
AC_MSG_RESULT([yes])
AC_DEFINE([GETSOCKNAME_TAKES_SOCKLEN_T], [], [Define if getsockname takes socklen_t as its third argument])],[
AC_MSG_RESULT([no])
])

AC_MSG_CHECKING([if struct msghdr has msg_control])
AC_TRY_COMPILE([
#include <sys/types.h>
#include <sys/socket.h>
],
[
struct msghdr hdr;
hdr.msg_control = 0;
],
[
AC_MSG_RESULT([yes])
AC_DEFINE([MSGHDR_HAS_MSG_CONTROL], [], [Define if struct msghdr has the msg_control field])
],
[
AC_MSG_RESULT([no])
])

CFLAGS="$saved_CFLAGS"

CSES_SUBDIRS="lwisudo lwicron lwiscript lwimount lwisettings"
CSES_SUBDIRS="$CSES_SUBDIRS lwiprompt lwimotd lwifstab"
CSES_SUBDIRS="$CSES_SUBDIRS lwilogrotate lwifiles lwisyslog"

case "$host_os" in
        linux*)
            echo "Configuring GP CSEs for Linux system"
            CSES_SUBDIRS="$CSES_SUBDIRS lwiselinux lwiapparmor"
            CSES_SUBDIRS="$CSES_SUBDIRS lwignome"
            CSES_SUBDIRS="$CSES_SUBDIRS lwinetwork"
            ;;
        solaris*)
            echo "Configuring GP CSEs for Solaris system"
            CSES_SUBDIRS="$CSES_SUBDIRS"
            ;;
        darwin8.*)
            echo "Configuring GP CSEs for Mac OS X - Tiger"
            CSES_SUBDIRS="$CSES_SUBDIRS lwimacinterface lwimacpolicy lwimacwrkgpmngr"
            CSES_SUBDIRS="$CSES_SUBDIRS lwinetwork"
                ;;
        darwin9.*)
            echo "Configuring GP CSEs for Mac OS X - Leopard"
            CSES_SUBDIRS="$CSES_SUBDIRS lwimacinterface lwimacpolicy lwimacwrkgpmngr"
            CSES_SUBDIRS="$CSES_SUBDIRS lwinetwork"
            ;;
        darwin10.*)
            echo "Configuring GP CSEs for Mac OS X - Snow Leopard"
            CSES_SUBDIRS="$CSES_SUBDIRS lwimacinterface lwimacpolicy lwimacwrkgpmngr"
            CSES_SUBDIRS="$CSES_SUBDIRS lwinetwork"
            ;;
        freebsd*)
            echo "Configuring GP CSEs for FreeBSD system"
            ;;
        hpux*)
            echo "Configuring GP CSEs for HPUX system"
            CSES_SUBDIRS="$CSES_SUBDIRS"
            ;;
        aix*)
            echo "Configuring GP CSEs for AIX system"
            CSES_SUBDIRS="$CSES_SUBDIRS"
            ;;
esac
AC_SUBST(CSES_SUBDIRS)

AC_CONFIG_FILES([Makefile
	 etc/Makefile
         etc/grouppolicy-settings.conf
	 etc/gpagentd.reg
         scripts/Makefile
         scripts/gpcron.sh
         scripts/gprsrtmnt.sh
	 include/Makefile
         utils/Makefile
         client/Makefile
         dlclient/Makefile
         server/Makefile
         server/auth/Makefile
         server/ldap/Makefile
         server/gpagentd/Makefile
         server/gpcse/Makefile
         server/cses/Makefile
         server/cses/lwiapparmor/Makefile
         server/cses/lwiapparmor/lwiapparmor.reg
         server/cses/lwicron/Makefile
         server/cses/lwicron/lwicron.reg
         server/cses/lwifiles/Makefile
         server/cses/lwifiles/lwifiles.reg
         server/cses/lwifstab/Makefile
         server/cses/lwifstab/lwifstab.reg
         server/cses/lwignome/Makefile
         server/cses/lwignome/lwignome.reg
         server/cses/lwiiptables/Makefile
         server/cses/lwiiptables/lwiiptables.reg
         server/cses/lwilogrotate/Makefile
         server/cses/lwilogrotate/lwilogrotate.reg
         server/cses/lwimacinterface/Makefile
         server/cses/lwimacpolicy/Makefile
         server/cses/lwimacpolicy/lwimacpolicy.reg
         server/cses/lwimacwrkgpmngr/Makefile
         server/cses/lwimacwrkgpmngr/lwimacwrkgpmngr.reg
         server/cses/lwimotd/Makefile
         server/cses/lwimotd/lwimotd.reg
         server/cses/lwimount/Makefile
         server/cses/lwimount/lwimount.reg
         server/cses/lwinetwork/Makefile
         server/cses/lwinetwork/lwinetwork.reg
         server/cses/lwiprompt/Makefile
         server/cses/lwiprompt/lwiprompt.reg
         server/cses/lwiscript/Makefile
         server/cses/lwiscript/lwiscript.reg
         server/cses/lwiselinux/Makefile
         server/cses/lwiselinux/lwiselinux.reg
         server/cses/lwisettings/Makefile
         server/cses/lwisettings/lwisettings.reg
         server/cses/lwisudo/Makefile
         server/cses/lwisudo/lwisudo.reg
         server/cses/lwisyslog/Makefile
         server/cses/lwisyslog/lwisyslog.reg
         tools/Makefile
         tools/gporefresh/Makefile
         tools/gpsetloglevel/Makefile])
AC_OUTPUT

